--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Get a sweet font */
 
 body {
     color: pink;
@@ -7,6 +6,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .board {
@@ -28,21 +28,22 @@ body {
         width: 30vw;
         margin: 3vh; 
     }
+}
 
 
-  }
+  /* }
   .level-one {
-    transform: translate(25%) skew(-30deg)
+    transform: translate(30%) skew(-30deg)
   }
   .level-two {
-    transform: translate(25%) skew(-30deg)
+    transform: translate(10%) skew(-30deg)
   }
   .level-three {
-    transform: translate(25%) skew(-30deg)
+    transform: translate(-10%) skew(-30deg)
   }
   .level-four {
-    transform: translate(25%) skew(-30deg)
-  }
+    transform: translate(-30%) skew(-30deg)
+  } */
   
   .sqr {
     width: 20%;
@@ -57,6 +58,14 @@ body {
         transform: scale(1.1);
         border: 2px solid greenyellow;
     }
+  }
+
+  .button {
+    color: pink;
+    background-color: black;
+    padding: 10px;
+    font-family: "Press Start 2P", system-ui, sans-serif;
+    border-color: aquamarine;
   }
 
   #open-modal {
@@ -88,4 +97,10 @@ body {
   #rules {
     text-align: left;
     line-height: 1.5;
+  }
+
+  @media (width < 400px) {
+    .sqr {
+        width:15%;
+    }
   }
