Got local storage saving history

--- a/css/style.css
+++ b/css/style.css
@@ -7,71 +7,57 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+}
 
-  .board {
+.board {
     display:flex;
     flex-wrap: wrap;
     align-items: center;
     flex-direction: column;
-  }
-  
-  .level-one, .level-two, .level-three, .level-four {
+}
+
+.level-one, .level-two, .level-three, .level-four {
     display: flex;
     flex-wrap: wrap;
-    width: 20vw;
+    width: 40vw;
     margin: 1.5vh;
     transform: skew(-30deg);
     transition: .5s ease;
-    
+
     &:hover {
-        width: 30vw;
+        width: 60vw;
         margin: 3vh;
     }
 }
 
-
-  /* }
-  .level-one {
-    transform: translate(30%) skew(-30deg)
-  }
-  .level-two {
-    transform: translate(10%) skew(-30deg)
-  }
-  .level-three {
-    transform: translate(-10%) skew(-30deg)
-  }
-  .level-four {
-    transform: translate(-30%) skew(-30deg)
-  } */
-  
-  .sqr {
+.sqr {
     width: 20%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 1.5/1;
     border: 2px solid pink;
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
-    margin: 0;
+    padding: .5em 0 0 0;
 
     &:hover {
         transform: scale(1.1);
-        border: 2px solid aquamarine;
+        border: 4px solid aquamarine;
     }
-  }
+}
 
-  .button {
+.button {
     color: pink;
     background-color: black;
     padding: 10px;
+    margin: 10px;
     font-family: "Press Start 2P", system-ui, sans-serif;
     border-color: pink;
 
     &:hover {
     border-color: aquamarine;
     }
-  }
+}
 
-  #open-modal {
+#open-modal {
     display: flex;
     justify-content: center;
     position: absolute;
@@ -79,9 +65,9 @@ body {
     height: 150vh;
     background-color: black;
     z-index: 1;
-  }
+}
 
-  #end-modal {
+#end-modal {
     display: none;
     justify-content: center;
     position: absolute;
@@ -89,40 +75,37 @@ body {
     height: 150vh;
     background-color: black;
     z-index: 1;
-  }
+}
 
-  #modal-content {
+#modal-content {
     width: 60%;
     text-align: center;
     line-height: 1.1;
-  }
+}
 
-  #rules {
+#rules {
     text-align: left;
     line-height: 1.5;
     color: skyblue;
-  }
+}
 
-  @media (width < 400px) {
+@media (width < 400px) {
     .level-one, .level-two, .level-three, .level-four {
         display: flex;
         flex-wrap: wrap;
-        width: 20vw;
+        width: 60vw;
         margin: 1.5vh;
         transform: skew(-30deg);
         
-        &:hover {
-            width: 20vw;
+        &:hover, &:focus {
+            width: 80vw;
             margin: 3vh;
         }
     }
     .sqr {
-        width:15%;
-        font-size: .5em;
-
-        &:hover {
+        &:hover, &:focus {
             transform: scale(1.1);
-            border: 2px solid aquamarine;
+            border: 3px solid aquamarine;
         }
     }
-  }
+}
