--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,12 @@ body {
     z-index: 1;
     max-height: 25vh;
     width: 100vw;
-    line-height: .65;
     h1 {
         font-size: 2em;
+        margin-bottom:0;
+    }
+    .button {
+        margin-bottom: 0;
     }
 }
 
